--- a/income-prediction/Pipfile
+++ b/income-prediction/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-numpy = "*"
-scikit-learn = "==0.24.2"
+scikit-learn = "==1.0"
 flask = "*"
 gunicorn = "*"
+xgboost = "==0.90"
 
 [dev-packages]
 
